--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,19 @@
 		<lombok.version>1.16.18</lombok.version>
 	</properties>
 
+	<distributionManagement>
+		<snapshotRepository>
+			<id>snapshots</id>
+			<name>My internal repository</name>
+			<url>http://192.168.178.220:8081/repository/maven-snapshots/</url>
+		</snapshotRepository>
+		<repository>
+			<id>releases</id>
+			<name>My internal repository</name>
+			<url>http://192.168.178.220:8081/repository/maven-releases/</url>
+		</repository>
+	</distributionManagement>
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
